iphone overflow bug fix

--- a/public/css/flex.less
+++ b/public/css/flex.less
@@ -89,9 +89,16 @@
   font-family: sans-serif;
 }
 
+html{
+  width:100vw;
+  height:100vh;
+  overflow: hidden;
+  position: relative;
+}
+
 body{
   width:100vw;
   height:100vh;
-
   overflow: hidden;
+  position: relative;
 }
